fix: Fix swagger endpoint
