# docs/swagger.yaml
@@ -57,30 +57,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /paper-wallet-core-service/wallet/withdraw:
-    post:
-      consumes:
-      - application/json
-      description: Withdraw funds from the user's wallet
-      parameters:
-      - description: Withdraw Request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/withdraw.WithdrawRequestDto'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Withdrawal Successful
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Withdraw funds from wallet
-      tags:
-      - wallet-controller
-  /users:
+  /paper-wallet-core-service/users:
     get:
       consumes:
       - application/json
@@ -140,7 +117,7 @@ paths:
       summary: Update an existing user
       tags:
       - user-controller
-  /users/{id}:
+  /paper-wallet-core-service/users/{id}:
     get:
       consumes:
       - application/json
@@ -161,4 +138,27 @@ paths:
       summary: Get user by ID
       tags:
       - user-controller
+  /paper-wallet-core-service/wallet/withdraw:
+    post:
+      consumes:
+      - application/json
+      description: Withdraw funds from the user's wallet
+      parameters:
+      - description: Withdraw Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/withdraw.WithdrawRequestDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Withdrawal Successful
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Withdraw funds from wallet
+      tags:
+      - wallet-controller
 swagger: "2.0"
