# internal/handler/user/controller_delete_user.go
@@ -14,7 +14,7 @@ import (
 // @Produce application/json
 // @Param user body user.DeleteUserRequestDto true "Delete User Request"
 // @Success 204 {object} nil "User successfully deleted"
-// @Router /users [delete]
+// @Router /paper-wallet-core-service/users [delete]
 
 func (u *UserController) DeleteUser(c echo.Context) error {
 	var (
