# internal/handler/user/controller_get_user.go
@@ -13,7 +13,7 @@ import (
 // @Produce application/json
 // @Param id path string true "User ID"
 // @Success 200 {object} domain.User
-// @Router /users/{id} [get]
+// @Router /paper-wallet-core-service/users/{id} [get]
 func (u *UserController) GetUser(c echo.Context) error {
 	var ctx = c.Request().Context()
 	id := c.Param("id")
